<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:src="@drawable/ic_stop"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Are"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="#C14E4E"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEditSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit1"
                    android:layout_margin="4dp"

                    android:backgroundTint="@color/red"
                    android:textAllCaps="false"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btnDeletSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/red"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btnCancelSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:layout_margin="4dp"

                    android:visibility="visible"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>