<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ramadan"
    tools:context=".RamadanMonthActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/ramadanMonthCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ramadan_month"
                        android:textColor="@color/white"

                        android:textStyle="bold"
                        />
                    <ImageView
                        android:id="@+id/addSubjectRamadan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"

                        android:src="@drawable/ic_add"
                        />
                    <ImageView
                        android:id="@+id/languageRamadan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_language"
                        />
                    <ImageView
                        android:id="@+id/addNotsRamadan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_edit"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <RadioGroup
                        android:id="@+id/RadioGroupRamadan"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioButtonramadanSaturday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:textStyle="bold"
                            android:buttonTint="@color/red"
                            android:textColor="@color/white"

                            android:text="@string/sat" />
                        <View
                            android:layout_width="2dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/white"/>

                        <RadioButton
                            android:id="@+id/radioButton2ramadanSunday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:buttonTint="@color/red"
                            android:text="@string/sun" />
                        <View
                            android:layout_width="2dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/white"/>
                        <RadioButton
                            android:id="@+id/radioButton3ramadanMonday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:buttonTint="@color/red"
                            android:textStyle="bold"
                            android:text="@string/mon" />
                        <View
                            android:layout_width="2dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/white"/>
                        <RadioButton
                            android:id="@+id/radioButton4ramadanTuesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:buttonTint="@color/red"
                            android:text="@string/tues" />
                        <View
                            android:layout_width="2dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/white"/>
                        <RadioButton
                            android:id="@+id/radioButton5ramadanWednesday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:buttonTint="@color/red"
                            android:textColor="@color/white"
                            android:text="@string/wed" />
                        <View
                            android:layout_width="2dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/white"/>
                        <RadioButton
                            android:id="@+id/radioButton6ramadanThursday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:buttonTint="@color/red"
                            android:textColor="@color/white"
                            android:text="@string/thu" />
                        <View
                            android:layout_width="2dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/white"/>
                        <RadioButton
                            android:id="@+id/radioButton7ramadanFriday"
                            android:layout_width="wrap_content"
                            android:textStyle="bold"
                            android:buttonTint="@color/red"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/fri" />
                    </RadioGroup>

                </HorizontalScrollView>
                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/SwipeRefreshLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">
                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/Liner"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/white"
                                />
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/room_1"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center_horizontal"
                                android:textStyle="bold"
                                android:textColor="@color/white"/>


                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rcRamadan"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/white"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/room_2"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center_horizontal"                        android:textStyle="bold"
                                android:textColor="@color/white"/>
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rc2Ramadan"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/white"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                            android:orientation="vertical">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/room_3"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center_horizontal"
                                android:textStyle="bold"
                                android:textColor="@color/white"/>
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rc3Ramadan"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/white"
                                />
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/room_4"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center_horizontal"
                                android:textStyle="bold"
                                android:textColor="@color/white"/>
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/rc4Ramadan"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_margin="2dp"
                                />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="@color/white"
                                />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            </LinearLayout>


        </LinearLayout>



</RelativeLayout>